--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Momentum</title>
   </head>
   <body>
+    <h1 class="title">Grab me!</h1>
+    <h1 class="title">Grab me!</h1>
+    <h1 class="title">Grab me!</h1>
+
+    <div class="hello">
+      <h1>hi1</h1>
+      <h1>hi2</h1>
+      <h1>hi3</h1>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
